# radar_cable_follower

./: CMakeLists.txt  README.md  index.html  package.xml
config/: params.yaml
iris/: iris (DC drone).sdf  iris.sdf.jinja  iris.sdf.last_generated  iris_depth_camera.sdf  iris_orig_change.sdf
iris/meshes/: collision_mesh_tarot.stl  collision_mesh_tarot_v2_smaller.stl
launch/: BAG_radar_power_follower.launch.py  HWtest_radar_power_follower.launch.py  NoDebug_radar_power_follower.launch.py  SIM_radar_power_follower.launch.py  pl_tracker_HW_QAV.launch.py  simulate_pointcloud_control_launch.py
msg/: TrackedPowerlines.msg
rviz/: sim.rviz  sim_offboard.rviz
scripts/: draw_PL_IDs.py  image_decompress.py  image_drawer.py  image_drawer_HW_compressed.py  image_drawer_SIM_latency.py  image_drawer_TEMP.py  image_drawer_latency.py  image_drawer_ros2bag.py  image_drawer_static_img.py  plot_xyz_offboard_error.py  point_trans_test.py  points_on_image.py  print_PL_IDs.py  rc_listener.py  uncompress_undistort_ros2.py
src/: drone_frame_broadcaster_node.cpp  geometry.cpp  geometry.h  lidar_to_mmwave.cpp  offboard_control.cpp  radar_pointcloud_filter.cpp  radar_pointcloud_filter_EIGEN.cpp
