<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radar_cable_follower</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nhma@mmmi.sdu.dk">ffn</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>iwr6843isk_ros2</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>radar_cable_follower_msgs</depend>
  <depend>iwr6843isk_pub</depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
